# attendence

./: camera.py  main.py  pyproject.toml
