[tool.poetry]
name = "face_recognition_project"
version = "0.1.0"
description = "A simple face recognition project."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
face_recognition = "^1.3.0"
opencv-python = "^4.5.3.56"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
